--- a/static/css/index.css
+++ b/static/css/index.css
@@ -15,6 +15,7 @@ body{
 
 h1{
     grid-area: r1;
+    text-align: center;
 }
 
 #optns{
@@ -68,4 +69,18 @@ a.button{
 a.button:hover{
     background-color:rgb(2, 29, 61);; /* Added background color */
     color: white; /* Added text color */
+}
+
+@media screen and (max-width: 870px){
+    #optns{
+        padding-top: 20px;
+        grid-area: r2;
+        width:100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    h1{
+        font-size: 25px;
+    }
 }
