--- a/static/css/inventory.css
+++ b/static/css/inventory.css
@@ -81,12 +81,34 @@ td{
     grid-area: r5;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     padding-bottom: 20px;
-    justify-content: right;
+    /* justify-content: right; */
 }
 
 #icons{
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+#filter{
+    display: flex;
+    flex-direction: row;
+}
+
+#fbox1{
+    padding-right: 20px;
+}
+
+th{
+    background-color: rgb(214, 241, 252);
+}
+
+#saverow{
+    padding: 5px;
+}
+
+.lastrow:focus{
+    background-color: rgb(214, 241, 252);
 }
