--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -103,6 +103,7 @@
             </tr>
         </tbody>
     </table>
+    <div id="home"><button>🏠</button></div>
     <script src="{{ url_for ('static', filename='scripts/inventory.js') }}"></script>
 </body>
 </html>
