added additional changes to sales receipt section

--- a/templates/details.html
+++ b/templates/details.html
@@ -19,8 +19,9 @@
             <tr>
                 <th></th>
                 <th>Product</th>
-                <th>Units</th>
-                <th>Sale Price ($)</th>
+                <th>QTY</th>
+                <th>Unit Price</th>
+                <th>Amount</th>
             </tr>
         </thead>
         <tbody id="tableBody">
