--- a/templates/newsale.html
+++ b/templates/newsale.html
@@ -8,15 +8,15 @@
     <title>Sales Invoice</title>
 </head>
 <body>
-    <h1>Create Invoice</h1>
-    <p id="pagedesc">Please enter your sales invoice product information.</p>
+    <h1>Create Receipt</h1>
+    <p id="pagedesc">Please enter your sales receipt product information.</p>
     <div id="savebtn"><button id="saverow">💾 Save invoice</button></div>
     <table id="table">
         <thead id="categories">
             <tr>
                 <th></th>
                 <th>Product</th>
-                <th>Units</th>
+                <th>QTY</th>
                 <th>Sale Price ($)</th>
             </tr>
         </thead>
