--- a/templates/sales.html
+++ b/templates/sales.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Business Sales</h1>
-    <p id="pagedesc">Here you can track item sales and generate sales invoices.</p>
+    <p id="pagedesc">Here you can track item sales and generate sales receipts.</p>
     <div id="title">
         <h2 id="titletext">Table Title</h2>
         <button id="pencil">✏️</button>
@@ -18,13 +18,13 @@
     <div id="newsale">
         <div id="filter">
         </div>
-        <button id="newsalebtn">💲 Create New Sales Invoice</button>
+        <button id="newsalebtn">💲 Create New Sales Receipt</button>
     </div>
 
     <table id="table">
         <thead id="categories">
             <tr>
-                <th>Invoice id</th>
+                <th>Receipt id</th>
                 <th>Date</th>
                 <th>Sale Total ($)</th>
                 <th>Details</th>
