--- a/static/css/details.css
+++ b/static/css/details.css
@@ -25,15 +25,15 @@ h1{
     grid-area: r2;
     width: 50%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    padding-bottom: 20px;
 }
 
 h2{
     /* font-size: larger; */
     font: bolder;
-    padding-top: 50px;
-    padding-bottom: 70px;
+    margin:0%;
+    font-size: medium;
 }
 
 table{
@@ -89,9 +89,15 @@ button{
     display: block;
 }
 
+[name="unitPrice"]{
+    text-align: right;
+    display: block;
+}
+
 #sum{
     text-align: right;
     display: block;
+    font-weight: bold;
 }
 
 
