--- a/static/css/details.css
+++ b/static/css/details.css
@@ -129,7 +129,14 @@ button{
     }
 
     h2{
-        font-size: medium;
+        font-size: 12px;
     }
 
+    text{
+        font-size: 12px;
+    }
+
+    h1{
+        font-size:25px;
+    }
 }
